# ical-icloud-sync

./: Dockerfile  README.md  pyproject.toml  repository.json
.github/workflows/: docker-build.yml  docker-image.yml
addons/ical-icloud-sync/: Dockerfile  config.json  run.sh
ical-icloud-sync-addon/: Dockerfile  build.json  config.json
ical-icloud-sync-addon/rootfs/etc/services.d/ical_icloud_sync/: run
ical_sync/: ical.py  icloud.py  main.py  sync.py
rootfs/app/: ical-icloud-sync.sh
rootfs/etc/s6-overlay/s6-rc.d/init-ical-icloud-sync/: run  up
